# zju-web-seat-reservation

./: .gitattributes  .gitignore  README.md  config.example.json  pyproject.toml  启动助手.bat
.github/workflows/: tests.yml
docs/: GITHUB_RELEASE_WORKFLOW.md  GITHUB_UPLOAD_CHECKLIST.md  使用说明书.md
src/seat_assistant/: __init__.py  app.py  browser.py  desktop_notifications.py  domain.py  engine.py  http_adapter.py  http_endpoints.py  http_session.py  redaction.py  scheduler.py  storage.py
src/seat_assistant/static/: app.css  app.js
src/seat_assistant/templates/: index.html
tests/: test_app.py  test_browser.py  test_domain.py  test_engine.py  test_frontend.py  test_fuzz_encrypt.py  test_http_adapter.py  test_launcher.py  test_redaction.py  test_scheduler.py  test_static_ui.py  test_storage.py
