[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zju-web-seat-reservation"
version = "0.1.0"
description = "Local Web console for guarded ZJU library seat reservation automation"
requires-python = ">=3.11"
dependencies = [
    "APScheduler>=3.10,<4",
    "FastAPI>=0.115",
    "Jinja2>=3.1",
    "Pillow>=10",
    "playwright>=1.52",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
test = ["httpx>=0.28", "pytest>=8"]

[project.scripts]
zju-seat-assistant = "seat_assistant.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
seat_assistant = ["templates/*.html", "static/*.css", "static/*.js"]
